# Paddle

./: .gitignore  CMakeLists.txt  Dockerfile.android  Installation.md  README.md
cmake/: acl.cmake  util.cmake
cmake/cross_compiling/: android.cmake  raspberry_pi.cmake
paddle/capi/examples/model_inference/dense/: CMakeLists.txt  mnist_v2.py  output.paddle.model
paddle/capi/examples/model_inference/ssd/: CMakeLists.txt  FindOpenCV.cmake  a.cpp  main.cpp
paddle/capi/examples/model_inference/vgg16/: CMakeLists.txt  cat_224.txt  dump_v2_config.py  main.c  vgg.py
paddle/gserver/activations/: ActivationFunction.cpp  ActivationFunction.h
paddle/gserver/gradientmachines/: NeuralNetwork.cpp
paddle/gserver/layers/: ACLBaseBaseTensor.cpp  ACLBaseBaseTensor.hpp  ACLOperator.cpp  ACLOperator.hpp  ACLTensor.cpp  ACLTensor.hpp  ExpandConvLayer.cpp  ExpandConvLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  PoolProjectionLayer.cpp  PoolProjectionLayer.h
paddle/scripts/docker/: build_android.sh
