project(vgg16)
cmake_minimum_required(VERSION 2.8)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
aux_source_directory(. SRC_LIST)
include_directories("/home/zfq/Paddle/build/CAPI/include" "/home/zfq/cnpy/build/cnpy/include")
LINK_DIRECTORIES("/home/zfq/Paddle/build/CAPI/lib" "/home/zfq/cnpy/build/cnpy/lib")  
add_executable(${PROJECT_NAME} ${SRC_LIST})
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
target_link_libraries(${PROJECT_NAME} libpaddle_capi_shared.so -lcnpy -lz)
